--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -3,35 +3,23 @@ ja:
     attributes:
       comment:
         body: コメント
-ja:
-  activerecord:
-    attributes:
       chat:
         message: メッセージ
-ja:
-  activerecord:
-    attributes:
+      contact:
+        title: タイトル
+        body: 本文
       post:
         title: 投稿のタイトル
         subtitle: 投稿のキャッチフレーズ
         genre: ジャンル(選択)
         images: 写真(ファイル選択)
-    # attributes:
-    #   material:
-    #     material_name: 材料名
+      post/materials:
+        material_name: 材料名
+        material_shop: 購入店
+      post/works:
+        works: 作り方
+        detail: 作り方詳細
 
-  ja:
-    activerecord:
-      attributes:
-        post:
-          work:
-            works: 作り方
-            detail: 作り方詳細
-  ja:
-    activerecord:
-      attributes:
-        post:
-          material:
-            material_name: 材料名
+
 
 
