--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -19,7 +19,7 @@ ja:
         material_name: 材料名
         shop: 購入店
       post/works:
-        works: 作り方
+        images: 写真
         detail: 作り方詳細
 
 
